Fixed menu and contact form layout issue and prepopulation

--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -1193,4 +1193,11 @@
 
 // $include-html-visibility-classes: $include-html-classes;
 
+
+
 @import 'foundation';
+
+
+textarea {
+    min-height:150px;
+}
